k8s/services-dev/patches/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aicp-api
spec:
  serviceName: aicp-api
  replicas: 1
  selector:
    matchLabels:
      app: aicp-api
  template:
    spec:
      containers:
        - name: aicp-api
          image: asia-southeast1-docker.pkg.dev/enspara/aicp/aicp-api:dev-latest
          volumeMounts:
            - name: storage-volume
              mountPath: /app/server/storage
            - name: firebase-service-key
              mountPath: /app/secrets
              readOnly: true
            - name: tmp-volume
              mountPath: /tmp
            - name: cache-volume
              mountPath: /app/.cache
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsGroup: 1000
            runAsUser: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: 750Mi
              cpu: '1'
            limits:
              memory: 1Gi
              cpu: '2'
      volumes:
        - name: firebase-service-key
          secret:
            secretName: firebase-service-key
        - name: tmp-volume
          emptyDir: {}
        - name: cache-volume
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: storage-volume
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 5Gi
